--- a/Assignment-2/css/sing_login.css
+++ b/Assignment-2/css/sing_login.css
@@ -82,6 +82,14 @@ body::before {
 
 }
 
+.input-box .mail {
+  position: absolute;
+  right: 20px;
+  top: 30%;
+  transform: translate(-50%);
+  font-size: 18px;
+}
+
 .input-box .lock {
   position: absolute;
   right: 20px;
